re PR c++/48319 ([C++0x] Segmentation fault in instantiation of std::is_constructible<int>)

PR c++/48319
	* pt.c (value_dependent_expression_p): Handle TEMPLATE_ID_EXPR.

From-SVN: r171688